Bug squashing / polishing:
1) Changed all master inputs to required + changed hasRequiredInputs() implementation to ignore those that are hidden via the "off" class (but not type=hidden without off).
2) Fixes multiple "required input" detection problems (e.g., in my tests, transcriptomics.  Also fixed an error where the master metabolite input wasn't visible (restored a line that was apparently accidentally deleted relative to master).
3) Improved Step 3 missing timestamp error message to put it in Step 3 by the associated control, making it more similar to the step 2 error message added yesterday. Other "missing input" messages should eventually be added for other master controls, and autocomplete styling should be improved to show missing/bad input (EDD-335)
4) Removed default values for master measurement type hidden inputs -- user must provide these!

--- a/main/static/main/common.css
+++ b/main/static/main/common.css
@@ -1326,6 +1326,13 @@ ol.comment-list > li {
     display: block;
     font-size: 11px;
 }
+
+.missingSingleFormInput {
+    color: red;
+    display: block;
+    font-size: 11px;
+}
+
 .meta-remove {
     background-color: transparent;
     background-image: url("./images/edit-cancel.png");
