--- a/main/static/main/import.css
+++ b/main/static/main/import.css
@@ -302,6 +302,12 @@ select.disamStd {
 	min-width: 10em;
 }
 
+#masterTimestampRequiredPrompt {
+	margin-left: 25px;
+}
+
+
+/* The Step 5 review section */
 .step5Subsection {
 	margin-top: 30px;
 }
@@ -325,6 +331,8 @@ select.disamStd {
 	margin-left: 20px;
 	margin-bottom: 20px;
 }
+
+/************************************************************************************************/
 
 #processingFileLocallyLabel {
 	margin: 0px;
